@@ -67,6 +67,8 @@ Version 2.0.0rc4 - The 'Target: REAL Stability' version.
 		  theApp.serverlist->GetServerByAddress(), which could be
 		  NULL. This was the reason why aMule was crashing when trying
 		  to connect to server with wxWidgets-2.5.2.
+		* Fixed compilation and linking in 2.5.x for amulecmd. Same
+		  problem as amuleweb.
 
 	thepolish:
 		* wxCas:
